fix: update index meta

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="hourly"
-      content="Convert that time spent into something more fun - like burgers"
+      content="Convert those Toggl entries into something more fun - like burgers"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/120-logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Hourly</title>
   </head>
